[package]
name = "cjk-token-reducer"
version = "0.5.0"
edition = "2021"
authors = ["Jim Huang"]
description = "Reduce Claude Code token usage by translating CJK to English"
license = "MIT"
repository = "https://github.com/jserv/cjk-token-reducer"
keywords = ["claude", "cjk-token", "translation", "cjk", "chinese", "japanese", "korean"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.80"

[[bin]]
name = "cjk-token-reducer"
path = "src/main.rs"

[lib]
name = "cjk_token_reducer"
path = "src/lib.rs"

[features]
default = ["cache", "tokenizer", "colored-output"]
# Translation cache with sled DB + postcard binary serialization
cache = ["dep:sled", "dep:sha2", "dep:hex", "dep:postcard"]
# Claude tokenizer for precise token counting
tokenizer = ["dep:claude-tokenizer"]
# Colored terminal output
colored-output = ["dep:colored"]
# Local offline translation using Opus-MT models via rust-bert (requires libtorch)
local-translate = ["dep:rust-bert", "dep:tch"]

[dependencies]
# Core dependencies (always included)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
futures = "0.3"
fastrand = "2"  # Lightweight RNG for retry jitter

# Optional: Translation cache
sled = { version = "0.34", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
postcard = { version = "1", features = ["alloc"], optional = true }

# Optional: Colored output
colored = { version = "2", optional = true }

# Optional: Claude tokenizer
claude-tokenizer = { version = "0.3", optional = true }

# Optional: Local offline translation (Opus-MT via rust-bert)
rust-bert = { version = "0.22", optional = true }
tch = { version = "0.16", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
